<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center" >

    <ImageView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/elfaklogo"/>
    
    <EditText android:id="@+id/edit_username"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="text"/>
    
    <EditText android:id="@+id/edit_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"/>
        
    <Button 
        android:id="@+id/button_login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/login"
        android:background="@drawable/hysteria_button"
        style="@style/dark_button"/>

</LinearLayout>
